tests/scheduling/fail/basic-1.stderr
error: scheduling error: the following expressions form a cycle : a
 --> tests/scheduling/fail/basic-1.rs:8:19
  |
8 |         a : int = a;
  |                   ^
